# GraphCast-test

./: .gitignore  README.md  main.py  pyproject.toml
src/graphcast_lab/: cli.py  runtime.py
